[package]
name = "async-cancellation-token"
version = "0.1.0"
edition = "2024"
authors = ["Junkang Yuan <yuanjunkang@gmail.com>"]
description = "A lightweight single-threaded Rust library for cancellation tokens, enabling cooperative cancellation of asynchronous tasks and callbacks."
repository = "https://github.com/fxdmhtt/async-cancellation-token"
license = "GPL-2.0"
keywords = ["asynchronous"]
categories = ["asynchronous"]

[dependencies]

[dev-dependencies]
futures = { version = "0.3.31", features = ["async-await"] }
futures-timer = "3.0.3"
